fixed overflow in some android tablets
Update sidepane.scss

Update index.css

--- a/src/components/start/sidepane.scss
+++ b/src/components/start/sidepane.scss
@@ -14,6 +14,7 @@
 
   &[data-hide="true"] {
     transform: translateX(376px);
+    animation: overflow-hider 0s ease-in-out 0.2s forwards;
   }
 }
 
